--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     ]
   },
   "dependencies": {
+    "@types/matter-js": "^0.18.3",
+    "matter-js": "^0.19.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
