--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
     "three": "^0.152.2",
     "web-vitals": "^2.1.4"
   },
