--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@react-three/drei": "^9.66.6",
     "@react-three/fiber": "^8.13.0",
+    "@tanstack/react-query": "^5.32.0",
     "@types/matter-js": "^0.18.3",
     "matter-js": "^0.19.0",
     "react": "^18.2.0",
